fix: hidden body overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,8 @@ body {
   background-size: cover;
 
   font-size: 1rem;
+
+  overflow: hidden;
 }
 
 .container {
